# actrix

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: ci.yml
crates/actrix-proto/: README.md  build.rs
crates/actrix-proto/proto/: common.proto  keyserver.proto  supervised.proto  supervisor.proto
crates/actrix-proto/src/: lib.rs
crates/ais/src/: handlers.rs  issuer.rs  ks_client_wrapper.rs  sn.rs  storage.rs
crates/ais/tests/: README.md  integration_test.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: lib.rs  metrics.rs
crates/ks/: Cargo.toml
crates/ks/src/: config.rs  grpc_client.rs  grpc_handlers.rs  handlers.rs  lib.rs  types.rs
crates/signaling/: Cargo.toml
crates/signaling/src/: actr_type_utils.rs  ais_client.rs  axum_router.rs  compatibility_cache.rs  lib.rs  load_balancer.rs  presence.rs  server.rs  service_registry.rs  service_registry_storage.rs
crates/signaling/tests/: acl_integration_test.rs  integration_test.rs
crates/supervit/: AGENTS.md  Cargo.toml  README.md
crates/supervit/examples/: supervisord.rs
crates/supervit/scripts/: test_supervised.sh
crates/supervit/src/: auth.rs  client.rs  config.rs  lib.rs  metrics.rs  nonce_auth.rs  realm.rs  service.rs
crates/supervit/tests/: supervisor_integration.rs
crates/turn/src/: authenticator.rs  (+1 more)
deploy/tpl/: config.template.toml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CRATES.md  DEVELOPMENT.md  DOCKER_DEPLOY.md  KS_GUIDE.md  SERVICES.md  security-design.md
docs/development/: CLAUDE.md
src/: error.rs  main.rs  observability.rs
src/service/: container.rs  manager.rs  mod.rs
tests/: actrix_fullstack.rs  actrix_process.rs
(+42 files in other folders)
