[package]
name = "supervit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "gRPC-based supervisor client for actrix nodes"

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.17"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Utilities
async-trait = "0.1"
once_cell = "1.19"
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }

# Cryptography
hmac = { workspace = true }
sha2 = { workspace = true }

# Authentication
nonce-auth = { workspace = true }

# System monitoring
pwrzv = { workspace = true }

# Internal dependencies
actrix-common = { path = "../common" }
actrix-proto = { path = "../actrix-proto" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
serial_test = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
nonce-auth = { workspace = true }

[[example]]
name = "supervisord"
path = "examples/supervisord.rs"

[[bin]]
name = "gen_credential"
path = "bin/gen_credential.rs"

[[bin]]
name = "superv"
path = "bin/supervisor_server.rs"
